--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cakephp/cakephp": "^4.5.0",
         "cakephp/migrations": "^3.7",
         "cakephp/plugin-installer": "^1.3",
+        "geoip2/geoip2": "^3.2",
         "mobiledetect/mobiledetectlib": "^3.74"
     },
     "require-dev": {
